Added support for rewritten URL at the deployment server

--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+Pre-installation
+================
+
+RewriteEngine On
+RewriteBase /path/to/dirroot
+RewriteRule ^dev$ local/dev/index.php
+RewriteRule ^dev/(.*)$ local/dev/$1
+
+
 Installation
 ============
 
